Texture Painting using Face Selection Mask fails to show texture if more than 1 texture is used #34837

Closed
opened 2013-04-02 09:04:05 +02:00 by Mike Sloman · 12 comments

%%%--- Operating System, Graphics card ---
OSX 10.7

- Blender version with error, and version that worked ---

2.66.5 r55715 New feature from Psy-Fi so no earlier working version?

- Short description of error ---

When using texture paint mode with Face Select Masking enabled and multiple textures assigned to the mesh only the last assigned texture shows in the texture editing window. IF you turn off the FSM button both(or more) textures show as expected.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See attached file TexturePaintModeIssue.blend
This is a simple plane subdived 10 times. 3 materials randonly assigned to faces onit. M1 assigned to a texture and M2+M3 assigned to another texture.

  1. Open file to see texture paint mode enabled with FSM on. Currently material 1 faces selcted and masked for painting but only black shows yet texture is present and painted as seen in the image editor on the right.

  2. Paint on the black faces and note no update of painting in texture window but the image editor texture shows the added red stencil correctly.

  3. Turn of FSM mode button and note that you can now see both texture inthe texture paint window correctly.

%%%

%%%--- Operating System, Graphics card --- OSX 10.7 - Blender version with error, and version that worked --- 2.66.5 r55715 New feature from Psy-Fi so no earlier working version? - Short description of error --- When using texture paint mode with Face Select Masking enabled and multiple textures assigned to the mesh only the last assigned texture shows in the texture editing window. IF you turn off the FSM button both(or more) textures show as expected. - Steps for others to reproduce the error (preferably based on attached .blend file) --- See attached file TexturePaintModeIssue.blend This is a simple plane subdived 10 times. 3 materials randonly assigned to faces onit. M1 assigned to a texture and M2+M3 assigned to another texture. 1. Open file to see texture paint mode enabled with FSM on. Currently material 1 faces selcted and masked for painting but only black shows yet texture is present and painted as seen in the image editor on the right. 2. Paint on the black faces and note no update of painting in texture window but the image editor texture shows the added red stencil correctly. 3. Turn of FSM mode button and note that you can now see both texture inthe texture paint window correctly. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%oh psy-fi - great additions BTW, most things seems to work well so far except this. Thanks!%%%

%%%oh psy-fi - great additions BTW, most things seems to work well so far except this. Thanks!%%%
Author

%%%It works as expected in cycles with properly set up material nodes. It was only the Blender Render mode of operation that seems not to work. Using Blender materials with textures mapped in the internal render has the same issue as described above for me.%%%

%%%It works as expected in cycles with properly set up material nodes. It was only the Blender Render mode of operation that seems not to work. Using Blender materials with textures mapped in the internal render has the same issue as described above for me.%%%
Author

%%%This is still present up to and including r56435.
Can you reproduce this or do you need more information?%%%

%%%This is still present up to and including r56435. Can you reproduce this or do you need more information?%%%

%%%Antony, any updates? %%%

%%%Antony, any updates? %%%

%%%Testing on OS X 10.8 with an NVidia 650M graphics card, I can't reproduce this error exactly.

The texture shows fine here, but I got some strange display corruption once after toggling face selection mode off and on again, but now I can't redo it anymore, it happened just once. Maybe indicates some dangling OpenGL state?

Which graphics card do you have?%%%

%%%Testing on OS X 10.8 with an NVidia 650M graphics card, I can't reproduce this error exactly. The texture shows fine here, but I got some strange display corruption once after toggling face selection mode off and on again, but now I can't redo it anymore, it happened just once. Maybe indicates some dangling OpenGL state? Which graphics card do you have?%%%
Author

%%%OSX 10.7.5 2.8 GHz Intel Core i7 Graphics card :: ATI 4850HD 512MB%%%

%%%OSX 10.7.5 2.8 GHz Intel Core i7 Graphics card :: ATI 4850HD 512MB%%%

%%%cant redo, r57751, 64bit arch linux, GeForce GTS 450
ran with bugle and it didnt give any complaints.%%%

%%%cant redo, r57751, 64bit arch linux, GeForce GTS 450 ran with bugle and it didnt give any complaints.%%%
Author

%%%Still exists trunk 2.67.1 r57726
Tried all Window Draw Methods and all Image Draw Methods in the user preferences with no change in behaviour.

Official 64 bit OSX build of 2.67b does the same as well.%%%

%%%Still exists trunk 2.67.1 r57726 Tried all Window Draw Methods and all Image Draw Methods in the user preferences with no change in behaviour. Official 64 bit OSX build of 2.67b does the same as well.%%%

%%%I can reproduce here, I'll check it out today.%%%

%%%I can reproduce here, I'll check it out today.%%%

%%%It should be fixed in r57764. Thanks for reporting!%%%

%%%It should be fixed in r57764. Thanks for reporting!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34837
No description provided.